tests/fixtures/errors/invalid_init_conversion.cpp
// Test: invalid init conversion
int main() {
    int x = "string";
    return 0;
}
